# JetBrains-Discord-Integration

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  DESCRIPTION.md  LICENSE  LICENSE.md  README.md  build.gradle  build.gradle.kts  gradle.properties  libs.versions.toml  secrets.gradle.kts.template  secrets.template.properties  settings.gradle  settings.gradle.kts
.run/: Dependency Updates.run.xml  Quick Build.run.xml  Run IDE.run.xml
analytics/interface/: build.gradle.kts
analytics/server/: Dockerfile  application.conf  build.gradle.kts  docker-compose.yml  example.conf  queries.sql  schema.sql
analytics/server/jooq/: build.gradle.kts
analytics/server/src/main/resources/: application.conf  logback.xml
analytics/server/src/main/resources/db/migration/: v1-initial.sql
analytics/server/src/test/resources/datasets/: empty.yml  files.yml  icons.yml  versions.yml
bot/: Dockerfile  build.gradle.kts  config.yaml.example
buildSrc/: build.gradle.kts  settings.gradle.kts
buildSrc/src/main/kotlin/: DockerPlugin.kt  FileIndicesPlugin.kt  GenerateJniHeadersPlugin.kt  GradlePlugin.kt  JooqExtensionExts.kt  KotlinJniHeadersTask.kt  PngOptimizingTransformer.kt  dependencies.kt  utils.kt
buildSrc/src/main/kotlin/org/glavo/javah/: ClassMetaInfo.kt  ClassName.kt  ClassPath.kt  Constant.kt  LICENSE  (+9 more)
discord-game-sdk/: discord-game-sdk.code-workspace
discord-game-sdk/discord-game-sdk-cpp/: build.gradle.kts
discord-game-sdk/discord-game-sdk-cpp/lib/discord_game_sdk/windows/x86/: discord_game_sdk.dll.lib
discord-game-sdk/discord-game-sdk-cpp/src/main/cpp/: overlay_manager.cpp  types.cpp
discord-game-sdk/discord-game-sdk-cpp/src/main/public/: discord_game_sdk.h  ffi.h  types.h
discord-game-sdk/jvm/: build.gradle.kts
discord-game-sdk/jvm/src/main/kotlin/: headers.kt
discord-game-sdk/native/: .gitignore  CMakeLists.txt  build.gradle.kts
discord-game-sdk/native/src/main/cpp/: DiscordActivityManagerImpl.cpp  DiscordApplicationManagerImpl.cpp  DiscordCoreImpl.cpp  DiscordUserManager.cpp  callback.cpp  commons.cpp  deconstructed.cpp  events.cpp  gamesdk_impl_NativeActivityImplKt.cpp  gamesdk_impl_NativeActivityManagerImpl.cpp  gamesdk_impl_NativeCoreImplKt.cpp  gamesdk_impl_managers_NativeActivityManagerImplKt.cpp  gamesdk_impl_managers_NativeImageManagerImplKt.cpp  gamesdk_impl_managers_NativeUserManagerImplKt.cpp  gamesdk_impl_utils_NativeObjectKt.cpp  greeter_impl.cpp  instance.cpp  jnihelpers.cpp  main.cpp  types.cpp  utils.cpp
discord-game-sdk/native/src/main/public/: callback.h  callback_typed.h  commons.h  debug.h  deconstructed.h  events.h  instance.h  jnihelpers.h  types.h  utils.h
discord-game-sdk/native/src/test/cpp/: greeter_test.cpp
gradle/: libs.versions.toml
gradle/plugins/: build.gradle.kts  settings.gradle.kts
gradle/plugins/src/main/kotlin/: BuildUtils.kt  DockerPlugin.kt  FileIndicesPlugin.kt  PngOptimizingTransformer.kt  dependencies.kt
icons/: .gitignore  build.gradle.kts
icons/applications/material/: command.txt  generate-icons.bat
icons/languages/: aac.yaml  actionscript.yaml  android.yaml  angularjs.yaml  ansible.yaml  antlr.yaml  apiblueprint.yaml  apple.yaml  applescript.yaml  aspectj.yaml  aspnet.yaml  assembly.yaml  atom.yaml  audio.yaml  autohotkey.yaml  avi.yaml  babel.yaml  backbone.yaml  bibtex.yaml  binary.yaml  blade.yaml  bower.yaml  browserslist.yaml  bundler.yaml  c.yaml  cakephp.yaml  circleci.yaml  clojure.yaml  clojurescript.yaml  cmake.yaml  commonlisp.yaml  cpp.yaml  csharp.yaml  csv.yaml  cucumber.yaml  curl.yaml  d.yaml  dart.yaml  default.yaml  docker.yaml  (+119 more)
icons/src/main/resources/discord/applications/: AI.yaml  CL.yaml  DB.yaml  GO.yaml  IC.yaml  IE.yaml  IU.yaml  MPS.yaml  OC.yaml  PC.yaml  PD.yaml  PE.yaml  PS.yaml  PY.yaml  QA.yaml  RD.yaml  RDCPPP.yaml  RM.yaml  RR.yaml  WRS.yaml  WS.yaml
icons/src/main/resources/discord/languages/: 7z.yaml  ada.yaml  angular.yaml  apache.yaml  appveyor.yaml  archive.yaml  arduino.yaml  aspectj.yaml  aspnet.yaml  assembly.yaml  aurelia.yaml  autoit.yaml  backbone.yaml  batch.yaml  bazel.yaml  boo.yaml  brainfuck.yaml  cabal.yaml  caffe.yaml  cargo.yaml  ceylon.yaml  clojure.yaml  cobol.yaml  coffeescript.yaml  compass.yaml  composer.yaml  crystal.yaml  cson.yaml  css.yaml  cuda.yaml  default.yaml  delphi.yaml  django.yaml  dll.yaml  docker.yaml  drupal.yaml  dylib.yaml  editorconfig.yaml  ejs.yaml  emacs.yaml  (+87 more)
icons/src/main/resources/discord/themes/: atom.yaml  classic.yaml  flat.yaml  material.yaml
icons/themes/: atom.yaml  classic.yaml  flat.yaml  flat2.yaml  material.yaml
plugin/: CHANGELOG.md  DESCRIPTION.md  build.gradle.kts  changelog.md  templates.adoc
plugin/gamesdk/: build.gradle.kts
plugin/gamesdk/src/main/cpp/: DiscordActivityManagerImpl.cpp  DiscordCoreImpl.cpp  greeter.cpp  greeter_impl.cpp
plugin/gamesdk/src/main/headers/: greeter.h
plugin/src/main/antlr/: Template.g4
plugin/src/main/resources/com.almightyalpaca.jetbrains.plugins.discord.plugin.i18n/: DiscordBundle.properties  DiscordBundle_de.properties
plugin/src/main/resources/discord/: changes.html
plugin/src/main/resources/i18n/: DiscordBundle.properties  DiscordBundle_de.properties
shared/: build.gradle.kts
tools/jniheaders/: build.gradle.kts
uploader/: build.gradle.kts
(+687 files in other folders)
